# CPP_Optimizations_Diary

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
2d_matrix_iteration/: index.html
2d_transforms/: index.html
about/: index.html
basics/prefer_references/: README.md
boost_flatmap/: index.html
compute_once/2d_matrix_iteration/: README.md
cpp/: pcl_conditional_removal.cpp  prefer_references.cpp  reserve.cpp  small_strings.cpp  strings_are_vectors.cpp  strings_concatenation.cpp
docs/: 2d_matrix_iteration.md  2d_transforms.md  about.md  boost_flatmap.md  dont_need_map.md  index.md  no_lists.md  palindrome.md  pcl_filter.md  pcl_fromROS.md  prefer_references.md  reserve.md  small_strings.md  small_vectors.md  strings_are_vectors.md  strings_concatenation.md
dont_need_map/: index.html
just_a_string/: CMakeLists.txt  README.md
just_a_string/small_strings/: README.md
just_a_string/strings_are_vectors/: README.md
no_lists/: index.html
overrides/: main.html
palindrome/: index.html
pcl_filter/: index.html
pcl_fromROS/: index.html
prefer_references/: index.html
reserve/: index.html
search/: search_index.json
small_strings/: index.html
small_vectors/: index.html
strings_are_vectors/: index.html
strings_concatenation/: index.html
vectors_everywhere/dont_need_map/: README.md
vectors_everywhere/no_std_list/: README.md
vectors_everywhere/reserve/: README.md
vectors_everywhere/small_vectors/: README.md
